# Openai_Agent_SDK_Projacts

01_Writer_Agent/: requirments.txt  writer_agent.py  writer_agent_with_ui.py
02_Currency_Converter_Agent/: main.py  pyproject.toml
03_Pro_and_Free_User_track_Agent/: agent.py  main.py  pyproject.toml
04_Calendar_Event_Extractor_Agent/: agent.py  main.py  pyproject.toml
05_Shopping_Agent_With_API/: main.py  pyproject.toml  requirements.txt
05_Shopping_Agent_With_API/static/: index.html  script.js  styles.css
06_Youtube_Transcript_Agent/: agent.py  main.py  pyproject.toml  requirements.txt
07_Book_Recommendation_Agent/: agent_core.py  app.py  pyproject.toml  requirements.txt
08_Resume_Analyzer_Agent/: agent.py  main.py  pyproject.toml
09_Food_Freshness_Safety_Agent/: main.py  pyproject.toml  requirements.txt
10_Pill_Identifier_Agent/: main.py  pyproject.toml
11_Diagram_Labeling_Agent/: main.py  pyproject.toml
12_Building_Crack_Detector_Agent/: main.py  pyproject.toml  requirements.txt
13_Eyes_Infection_detector_AI/: main.py  pyproject.toml  requirements.txt
14_Inventory_Management_Assistant/: inventory.json  main.py  pyproject.toml
15_Vehicle_Damage_Estimator_AI/: main.py  pyproject.toml
16_Whatsapp_Agent/: contacts.json  main.py  my_config.py  pyproject.toml
17_Tokenizer_App/: main.py  pyproject.toml  requirements.txt
