[project]
name = "05-shopping-agent-with-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "logging>=0.4.9.6",
    "openai-agents>=0.0.17",
    "pydantic>=2.11.7",
]
